--- a/index.html
+++ b/index.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>rengeM</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>rengeM | الصفحة الرئيسية</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>تطبيق rengeM</h1>
-    <a href="login.html" class="btn">تسجيل الدخول</a>
-    <a href="signup.html" class="btn">إنشاء حساب</a>
+
+  <header>
+    <span>rengeM - الرئيسية</span>
+    <button onclick="logout()">تسجيل الخروج</button>
+  </header>
+
+  <div id="container">
+    <div id="friendsList">
+      <input type="text" id="searchUser" placeholder="ابحث عن مستخدم..." oninput="searchUsers()">
+      <ul id="usersList"></ul>
+    </div>
+
+    <div id="chatBox">
+      <div id="chatWith">اختر صديقًا لبدء المحادثة</div>
+      <div id="messages"></div>
+      <div id="inputArea">
+        <input type="text" id="messageInput" placeholder="اكتب رسالة...">
+        <button id="sendButton" onclick="sendMessage()">إرسال</button>
+      </div>
+    </div>
   </div>
+
+  <script src="firebase.js"></script>
+  <script src="script.js"></script>
+
 </body>
 </html>
