--- a/signup.html
+++ b/signup.html
@@ -1,78 +1,25 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
-  <meta charset="UTF-8">
-  <title>إنشاء حساب - rengeM</title>
-  <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      background: linear-gradient(to bottom, #1e1e2f, #2a2a3d);
-      font-family: 'Segoe UI', sans-serif;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-    }
-    .signup-container {
-      background: #2f2f40;
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 0 10px #00000080;
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
-    }
-    .signup-container h2 {
-      margin-bottom: 20px;
-    }
-    input {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 10px;
-      background: #444;
-      color: white;
-      font-size: 16px;
-    }
-    button {
-      width: 100%;
-      padding: 12px;
-      background: #28a745;
-      color: white;
-      border: none;
-      border-radius: 10px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #1e7e34;
-    }
-    .login-link {
-      margin-top: 15px;
-      color: #ccc;
-    }
-    .login-link a {
-      color: #00bfff;
-      text-decoration: none;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>إنشاء حساب | rengeM</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body>
-
-  <div class="signup-container">
-    <h2>إنشاء حساب جديد في rengeM</h2>
-    <input type="text" id="fullName" placeholder="الاسم الكامل" required>
-    <input type="text" id="username" placeholder="اسم المستخدم" required>
-    <input type="password" id="password" placeholder="كلمة المرور" required>
-    <button id="signupBtn">إنشاء الحساب</button>
-    <div class="login-link">
-      لديك حساب؟ <a href="login.html">تسجيل الدخول</a>
-    </div>
+<body class="login-page">
+  <div class="login-container">
+    <h1 class="app-title">rengeM</h1>
+    <h2>إنشاء حساب</h2>
+    <form id="signupForm">
+      <input type="text" id="signupUsername" placeholder="اسم المستخدم" required />
+      <input type="text" id="signupFullName" placeholder="الاسم الكامل" required />
+      <input type="password" id="signupPassword" placeholder="كلمة المرور" required />
+      <button type="submit" id="signupBtn">إنشاء حساب</button>
+    </form>
+    <p>لديك حساب؟ <a href="login.html">تسجيل الدخول</a></p>
   </div>
 
-  <script type="module" src="signup.js"></script>
+  <script type="module" src="firebase-config.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
