--- a/login.html
+++ b/login.html
@@ -3,19 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>تسجيل الدخول | rengeM</title>
+  <title>تسجيل الدخول | رينجم</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="login-page">
   <div class="login-container">
-    <h1 class="app-title">rengeM</h1>
-    <h2>تسجيل الدخول</h2>
-    <form id="loginForm">
-      <input type="text" id="loginUsername" placeholder="اسم المستخدم" required />
-      <input type="password" id="loginPassword" placeholder="كلمة المرور" required />
-      <button type="submit" id="loginBtn">دخول</button>
+    <h1>تسجيل الدخول</h1>
+    <form onsubmit="login(event)">
+      <input type="text" id="login-username" placeholder="اسم المستخدم" required />
+      <input type="password" id="login-password" placeholder="كلمة المرور" required />
+      <button type="submit">تسجيل الدخول</button>
     </form>
-    <p>ليس لديك حساب؟ <a href="signup.html">أنشئ حساب</a></p>
+    <p>ليس لديك حساب؟ <a href="signup.html">إنشاء حساب</a></p>
   </div>
 
   <script type="module" src="firebase-config.js"></script>
