--- a/friends.html
+++ b/friends.html
@@ -2,48 +2,22 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>قائمة الأصدقاء | rengeM</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>الأصدقاء | رينجم</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <div class="container">
-    <h1 class="logo">rengeM</h1>
-    <div id="friendsList"></div>
-    <br>
-    <input type="text" id="friendUsername" placeholder="اسم المستخدم لإضافته كصديق">
-    <button onclick="addFriend()">إضافة صديق</button>
-  </div>
+<body class="friends-page">
+  <header>
+    <h2>الأصدقاء</h2>
+    <a href="chat.html">رجوع</a>
+  </header>
 
-  <script>
-    const user = JSON.parse(localStorage.getItem("currentUser"));
-    const friends = user.friends || [];
+  <main>
+    <input type="text" id="search-user" placeholder="بحث عن مستخدم..." oninput="searchUsers(this.value)">
+    <div id="search-results"></div>
+  </main>
 
-    function showFriends() {
-      const container = document.getElementById("friendsList");
-      container.innerHTML = "";
-      if (friends.length === 0) {
-        container.innerHTML = "لا يوجد أصدقاء بعد.";
-        return;
-      }
-
-      friends.forEach(friend => {
-        const div = document.createElement("div");
-        div.innerHTML = `<a href="chat.html?user=${friend}">${friend}</a>`;
-        container.appendChild(div);
-      });
-    }
-
-    function addFriend() {
-      const username = document.getElementById("friendUsername").value.trim();
-      if (!username || friends.includes(username)) return;
-
-      friends.push(username);
-      user.friends = friends;
-      localStorage.setItem("currentUser", JSON.stringify(user));
-      showFriends();
-    }
-
-    showFriends();
-  </script>
+  <script type="module" src="firebase-config.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
