--- a/profile.html
+++ b/profile.html
@@ -2,37 +2,26 @@
 <html lang="ar">
 <head>
   <meta charset="UTF-8">
-  <title>الملف الشخصي - rengeM</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>الملف الشخصي | رينجم</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="profile-page">
-  <div class="container">
-    <h1 class="page-title">ملفي الشخصي</h1>
+  <header>
+    <h2>الملف الشخصي</h2>
+    <a href="chat.html">رجوع</a>
+  </header>
 
-    <div class="profile-box">
-      <img src="images/default-profile.png" alt="الصورة الشخصية" class="profile-image">
-      <h2 id="displayName">الاسم الكامل</h2>
-      <p><strong>اسم المستخدم:</strong> <span id="username">username</span></p>
-      <p><strong>السيرة الذاتية:</strong> <span id="bio">نبذة عنك...</span></p>
-      <p><strong>الحالة:</strong> <span id="status">نشط الآن</span></p>
+  <main>
+    <div id="profile-info">
+      <img id="profile-image" src="default.jpg" alt="صورة المستخدم">
+      <h3 id="profile-name"></h3>
+      <p id="profile-username"></p>
+      <p id="last-seen"></p>
     </div>
+  </main>
 
-    <div class="actions">
-      <a href="edit-profile.html" class="btn">تعديل الملف</a>
-      <button onclick="goBack()" class="btn secondary">رجوع</button>
-    </div>
-  </div>
-
-  <script>
-    function goBack() {
-      window.history.back();
-    }
-
-    // هنا يمكن ربط البيانات الحقيقية من Firebase
-    // مثال:
-    // document.getElementById("displayName").textContent = user.fullName;
-    // document.getElementById("username").textContent = user.username;
-  </script>
+  <script type="module" src="firebase-config.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
