--- a/chat.html
+++ b/chat.html
@@ -1,33 +1,38 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>الدردشة | رينجم</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>دردشة - rengeM</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body class="chat-page">
-  <header>
-    <h2>الدردشة</h2>
+<body>
+  <header class="app-header">
+    <h2>rengeM</h2>
     <button onclick="logout()">تسجيل الخروج</button>
   </header>
 
-  <main id="chat-main">
-    <div id="friends-list">
-      <!-- قائمة الأصدقاء -->
-    </div>
+  <div class="main-container">
+    <aside class="friends-list">
+      <h3>الأصدقاء</h3>
+      <ul id="friends"></ul>
+      <input type="text" id="searchInput" placeholder="ابحث عن مستخدم...">
+      <button onclick="searchUser()">إضافة صديق</button>
+    </aside>
 
-    <div id="chat-section">
-      <div id="chat-header"></div>
-      <div id="chat-messages"></div>
-      <form onsubmit="sendMessage(event)">
-        <input type="text" id="message-input" placeholder="اكتب رسالة...">
-        <button type="submit">إرسال</button>
-      </form>
-    </div>
-  </main>
+    <section class="chat-box">
+      <div class="chat-header" id="chatHeader">اختر صديقًا للمحادثة</div>
+      <div class="chat-messages" id="messagesBox"></div>
+      <div class="chat-input">
+        <input type="text" id="messageInput" placeholder="اكتب رسالتك...">
+        <button onclick="sendMessage()">إرسال</button>
+      </div>
+    </section>
+  </div>
 
-  <script type="module" src="firebase-config.js"></script>
-  <script type="module" src="app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+  <script src="app.js"></script>
+  <script src="chat.js"></script>
 </body>
-      </html>
+</html>
