--- a/login.html
+++ b/login.html
@@ -1,27 +1,65 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>تسجيل الدخول</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>تسجيل الدخول - rengeM</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
     <h2>تسجيل الدخول</h2>
-    <input type="text" id="login-username" placeholder="اسم المستخدم" />
-    <input type="password" id="login-password" placeholder="كلمة المرور" />
-    <button onclick="loginUser()">دخول</button>
-    <p>ليس لديك حساب؟ <a href="signup.html">إنشاء حساب</a></p>
+    <form id="loginForm">
+      <input type="text" id="username" placeholder="اسم المستخدم" required />
+      <input type="password" id="password" placeholder="كلمة المرور" required />
+      <button type="submit">تسجيل الدخول</button>
+      <p>ليس لديك حساب؟ <a href="signup.html">إنشاء حساب</a></p>
+    </form>
   </div>
 
-  <script src="app.js"></script>
-  <script>
-    function loginUser() {
-      const username = document.getElementById("login-username").value;
-      const password = document.getElementById("login-password").value;
-      login(username, password);
-    }
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+    import {
+      getDatabase, ref, get
+    } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyDkL37i0-pd885YbCBYOkADYQVQINcswhk",
+      authDomain: "messengerapp-58f7a.firebaseapp.com",
+      databaseURL: "https://messengerapp-58f7a-default-rtdb.firebaseio.com",
+      projectId: "messengerapp-58f7a",
+      storageBucket: "messengerapp-58f7a.appspot.com",
+      messagingSenderId: "46178168523",
+      appId: "1:46178168523:web:cba8a71de3d7cc5910f54e"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+
+    document.getElementById("loginForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+
+      const username = document.getElementById("username").value.trim();
+      const password = document.getElementById("password").value;
+
+      if (!username || !password) return alert("يرجى إدخال جميع البيانات");
+
+      const userRef = ref(db, "users/" + username);
+
+      get(userRef).then((snapshot) => {
+        if (snapshot.exists()) {
+          const userData = snapshot.val();
+          if (userData.password === password) {
+            localStorage.setItem("username", username);
+            window.location.href = "chat.html";
+          } else {
+            alert("كلمة المرور غير صحيحة");
+          }
+        } else {
+          alert("اسم المستخدم غير موجود");
+        }
+      });
+    });
   </script>
 </body>
 </html>
